about section implementation

--- a/styles/basic.css
+++ b/styles/basic.css
@@ -19,7 +19,7 @@ a {
     color: unset
 }
 
-h1, h2, h3, h4, h5, h6, p {
+h1, h2, h3, h4, h5, h6, p, figure {
     margin: 0;
 }
 
@@ -54,7 +54,7 @@ h1, h2, h3, h4, h5, h6, p {
     cursor: pointer;
 }
 
-.btn--singin {
+.btn--signin {
     background-color: transparent;
     color: var(--co-black);
 }
